Menu de navegação
Criação do menu de navegação e integração de todas as telas. A partir de agora todas as páginas são HTML. O funcionamento será detalhado no Slack.

--- a/source/empresa/estoque/fio_de_nylon.html
+++ b/source/empresa/estoque/fio_de_nylon.html
@@ -20,7 +20,7 @@
                 </h2>
             </div>
             <div onclick="mudarImgParaQuant();" class="canto imagemDoProduto">
-                <img style="width: 100%;" src="source/empresaimg/fio.jpg" id="scale-demo" alt="">
+                <img style="width: 100%;" src="source/empresa/img/fio.jpg" id="scale-demo" alt="">
             </div>
 
         </table>
