--- a/source/empresa/estoque/cola_tecido.html
+++ b/source/empresa/estoque/cola_tecido.html
@@ -20,7 +20,7 @@
                 </h2>
             </div>
             <div onclick="mudarImgParaQuant();" class="canto imagemDoProduto">
-                <img style="width: 100%;" src="source/empresaimg/cola.jpg" id="scale-demo" alt="">
+                <img style="width: 100%;" src="source/empresa/img/cola.jpg" id="scale-demo" alt="">
             </div>
         </table>
         <h4>Observaçoes</h4>
