URL mais maneira
Não precisa digitar o index.html na url, e independente da página que você for, vai continuar sem ele.

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <ul id="nav-mobile-cliente" class="right hide-on-med-and-down" style="display: none">
                 <li><a onclick="chamarTela('source/cliente/meuspedidos.html', 'Meus Pedidos')">Meus Pedidos</a></li>
                 <li><a onclick="chamarTela('source/cliente/pedido.html', 'Novo Pedido')">Novo Pedido</a></li>
-                <li><a href="index.html" onclick='document.cookie = "usuariologado=;"'>Sair</a></li>
+                <li><a href="" onclick='document.cookie = "usuariologado=;"'>Sair</a></li>
             </ul>
             <ul id="nav-mobile-empresa" class="right hide-on-med-and-down" style="display: none" style="color: #eceff1">
                 <li><a onclick="chamarTela('source/empresa/controlepedidos.html', 'Controle Pedidos');">Controle Pedidos</a></li>
                 <li><a onclick="chamarTela('source/empresa/aprovarencomenda.html', 'Aprovar Encomenda');">Aprovar Encomendas</a></li>
                 <li><a onclick="$('#corpo').load('source/empresa/controleEstoque.html'); $('#corpo').show(); $('#cont2').html(''); $('#cont2').hide(); $('#titulo').html('Controle estoque'); document.title = 'Controle Estoque';">Estoque</a></li>
-                <li><a href="index.html" onclick='document.cookie = "usuariologado=;"'>Sair</a></li>
+                <li><a href="" onclick='document.cookie = "usuariologado=;"'>Sair</a></li>
             </ul>
         </div>
     </nav>
