--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
     <link rel="stylesheet" href="estilo.css">
 
+    <!-- Estilo tela: Aprovar Encomenda -->
+    <link rel="stylesheet" href="source/empresa/style/style.css">
+
     <script src="script.js"></script>
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
