Algumas correções e tentativa falha de usar ajax.

--- a/source/empresa/aprovarencomenda.html
+++ b/source/empresa/aprovarencomenda.html
@@ -11,7 +11,7 @@
             <th>Data do pedido</th>
             <th>Valor total</th>
             <th>
-                <center>Analisar pedido</center>
+                Analisar pedido
             </th>
         </tr>
         </thead>
