--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Libri - Login</title>
     <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="jquery.js"></script>
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
@@ -29,45 +29,55 @@
 
 <body>
     <!--Barra de navegação-->
-    <nav>
-        <div class="nav-wrapper blue-grey darken-4">
-            <a id="titulo" href="#" class="brand-logo center">Área Segura</a>
-            <a href="#" class="brand-logo left" style="color: #eceff1">Libri Factories</a>
-            <ul id="nav-mobile-cliente" class="right hide-on-med-and-down" style="display: none">
-                <li><a onclick="chamarTela('source/cliente/meuspedidos.html', 'Meus Pedidos')">Meus Pedidos</a></li>
-                <li><a onclick="chamarTela('source/cliente/pedido.html', 'Novo Pedido')">Novo Pedido</a></li>
-                <li><a href="" onclick='document.cookie = "usuariologado=;"'>Sair</a></li>
-            </ul>
-            <ul id="nav-mobile-empresa" class="right hide-on-med-and-down" style="display: none" style="color: #eceff1">
-                <li><a onclick="chamarTela('source/empresa/controlepedidos.html', 'Controle Pedidos');">Controle Pedidos</a></li>
-                <li><a onclick="chamarTela('source/empresa/aprovarencomenda.html', 'Aprovar Encomenda');">Aprovar Encomendas</a></li>
-                <li><a onclick="$('#corpo').load('source/empresa/controleEstoque.html'); $('#corpo').show(); $('#cont2').html(''); $('#cont2').hide(); $('#titulo').html('Controle estoque'); document.title = 'Controle Estoque';">Estoque</a></li>
-                <li><a href="" onclick='document.cookie = "usuariologado=;"'>Sair</a></li>
-            </ul>
-        </div>
-    </nav>
+    <ul class="side-nav" id="mobile-demo">
+    </ul>
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper blue-grey darken-4">
+                <a id="titulo" href="#" class="brand-logo center">Área Segura</a>
+
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+
+                <ul class="left hide-on-med-and-down">
+                    <a href="#" class="brand-logo left" style="color: #eceff1">Libri Factories</a>
+                </ul>
+
+                <ul id="nav-mobile-cliente" class="right hide-on-med-and-down" style="display: none">
+                    <li><a onclick="chamarTela('source/cliente/meuspedidos.html', 'Meus Pedidos')">Meus Pedidos</a></li>
+                    <li><a onclick="chamarTela('source/cliente/pedido.html', 'Novo Pedido')">Novo Pedido</a></li>
+                    <li><a href="" onclick='document.cookie = "usuariologado=;"'>Sair</a></li>
+                </ul>
+                <ul id="nav-mobile-empresa" class="right hide-on-med-and-down" style="display: none" style="color: #eceff1">
+                    <li><a onclick="chamarTela('source/empresa/controlepedidos.html', 'Controle Pedidos');">Controle Pedidos</a></li>
+                    <li><a onclick="chamarTela('source/empresa/aprovarencomenda.html', 'Aprovar Encomenda');">Aprovar Encomendas</a></li>
+                    <li><a onclick="$('#corpo').load('source/empresa/controleEstoque.html'); $('#corpo').show(); $('#cont2').html(''); $('#cont2').hide(); $('#titulo').html('Controle estoque'); document.title = 'Controle Estoque';">Estoque</a></li>
+                    <li><a href="" onclick='document.cookie = "usuariologado=;"'>Sair</a></li>
+                </ul>
+
+            </div>
+        </nav>
+    </div>
     <!--Div da tela de login-->
     <div class="row">
         <div class="container" id="containerLogin">
             <div id="dLogin">
-                <h5 id="bv" class="col s12 center-align">Informe suas credenciais</h5>
-                <div id="divUser" class="input-field col s6">
-                    <input id="user" type="text" class="validate">
-                    <label for="user">Usuário</label>
+                <div id="usuarios">
+                    <a id="voltar" class="btn"><i class="material-icons">arrow_back</i></a><br>
+                    <div id="user1" class="usuario">
+                        <div class="imagem-usuario"></div>
+                        <div class="nome-usuario">CLIENTE</div>
+                    </div>
+                    <div id="user2" class="usuario">
+                        <div class="imagem-usuario"></div>
+                        <div class="nome-usuario">FUNCIONÁRIO</div>
+                    </div>
+                    <div id="div-senha">
+                        <input id="input-usuario" type="text" class="validate" placeholder="Usuário">
+                        <input id="input-senha" type="password" class="validate" placeholder="Senha">
+                        <a class="btn" id="btn-entrar" onclick="fazerLogin()">Entrar</a>
+                        <div id="aCriarConta"><br><br>Não possui conta? <a id="criarConta" style="cursor: pointer">Crie uma agora!</a></div>
+                    </div>
                 </div>
-                <div id="divSenha" class="input-field col s6">
-                    <input id="pass" type="password" class="validate">
-                    <label for="pass">Senha</label>
-                </div>
-                <div class="input-field col s12">
-                    <select>
-                    <option value="" disabled selected>-- Informe o tipo de usuário --</option>
-                    <option value="1" text="Cliente">Cliente</option>
-                    <option value="2" text="Funcionário">Funcionário</option>
-                </select>
-                    <label>Tipo de usuário</label>
-                </div>
-                <a class="waves-effect waves-light btn" style="float: right; position: relative; display: inline-block; margin-right: 10px;" onclick="fazerLogin();">Entrar</a>
             </div>
         </div>
     </div>
@@ -109,18 +119,25 @@
             <a class="waves-effect waves-light btn red darken-4 modal-action modal-close"><i class="material-icons left">cancel</i>Cancelar pedido</a>
         </div>
     </div>
-    <!-- Modal Structure NOVA-->
+    <!--- Modal Structure NOVA -->
     <div id="modalDetalhesPedido" class="modal">
         <div class="modal-content">
             <div class="pedidoEsquerda">
                 <h5>Itens</h5>
                 <div class="itensPedido" onmouseleave="sumirImagem(1);">
-                    <div class="item" onmouseenter="mostrarImagem(1, 1);" onclick="iC(1, 1)">Pote</div>
-                    <div class="item" onmouseenter="mostrarImagem(1, 2);" onclick="iC(1, 2)">Potinho</div>
-                    <div class="item" onmouseenter="mostrarImagem(1, 3);" onclick="iC(1, 3)">Latinha</div><br>
-                    <div class="item" onmouseenter="mostrarImagem(1, 4);" onclick="iC(1, 4)">Cereal</div>
-                    <div class="item" onmouseenter="mostrarImagem(1, 5);" onclick="iC(1, 5)">Tomate</div>
-                    <div class="item" onmouseenter="mostrarImagem(1, 6);" onclick="iC(1, 6)">Chocolate</div>
+                    <table class="responsive-table centered highlight">
+                        <tbody>
+                        <tr class="produtos-lindinhos">
+                            <td><a onclick="iC(1,1);" class='item'>Produto 1</a></td>
+                        </tr>
+                        <tr class="produtos-lindinhos">
+                            <td><a onclick="iC(1,2);" class='item'>Produto 2</a></td>
+                        </tr>
+                        <tr class="produtos-lindinhos">
+                            <td><a onclick="iC(1,3);" class='item'>Produto 3</a></td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <div id="materiasPrimas" class="materiasPrimas">
                     <h5>Materia-prima a comprar</h5>
@@ -147,9 +164,10 @@
                 <div id="descricaoProduto" class="descricaoProduto"></div>
             </div>
         </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Rejeitar</a>
-            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Aprovar</a>
+        <hr>
+        <div id="parteLegal" style="float: right">
+            <a href="#!" class="btn modal-action modal-close waves-effect waves-green">Rejeitar</a>
+            <a href="#!" class="btn modal-action modal-close waves-effect waves-green">Aprovar</a>
         </div>
     </div>
     <!-- Modal Structure Brian-->
@@ -164,7 +182,57 @@
             <span id="confirmaModal"><a href="#!" class="modal-action modal-close waves-effect waves-green btn green lighten-4">Aprovar</a></span>
         </div>
     </div>
+    <!-- Modal Structure Isabela -->
+    <div id="modal1" class="modal">
+        <div class="modal-content">
+            <h4>Carrinho</h4>
+            <table class="highlight responsive-table centered">
+                <thead>
+                    <tr>
+                        <th>Item</th>
+                        <th>Quantidade</th>
+                        <th>Cor da tampa</th>
+                        <th>Cor da embalagem</th>
+                        <th>Preço</th>
+                        <th></th>
+                    </tr>
+                </thead>
 
+                <tbody id="carrinho">
+                    <tr>
+                        <td>Frasco</td>
+                        <td><input class="required" type="number" value="50" style="text-align: center" class="validate" min="50" max="200" step="10"></td>
+                        <td>Azul</td>
+                        <td>Transparente</td>
+                        <td>R$60.00</td>
+                        <td><i class="small material-icons">delete_forever</i><td>
+                    </tr>
+                    <tr>
+                        <td>Frasco</td>
+                        <td><input class="required" type="number" value="50" style="text-align: center" class="validate" min="50" max="200" step="10"></td>
+                        <td>Azul</td>
+                        <td>Transparente</td>
+                        <td>R$60.00</td>
+                        <td><i class="small material-icons">delete_forever</i><td>
+                    </tr>
+                    <tr>
+                        <td>Frasco</td>
+                        <td><input class="required" type="number" value="50" style="text-align: center" class="validate" min="50" max="200" step="10"></td>
+                        <td>Azul</td>
+                        <td>Transparente</td>
+                        <td>R$60.00</td>
+                        <td><i class="small material-icons">delete_forever</i><td>
+                    </tr>
+                </tbody>
+            </table>
+            <hr>
+            <h4 align="right">Valor Total: R$<span id="valorTotal">0,00</span> </h4>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Continuar Comprando</a>
+            <a href="source/cliente/orcamento.html" class="modal-action modal-close waves-effect waves-green btn-flat">Finalizar Compra</a>
+        </div>
+    </div>
 </body>
 
 </html>
