Alterações na página de aprovar encomenda

--- a/source/empresa/aprovarencomenda.html
+++ b/source/empresa/aprovarencomenda.html
@@ -1,8 +1,4 @@
-<center>
-    <h1 id="titulo">Aprovar compras</h1>
-</center>
-
--<ul id="tabs-swipe-demo" class="tabs row">
+<ul id="tabs-swipe-demo" class="tabs row">
     <li class="tab col l3 s12"><a class="active tab_item" href="#pedidosPendentes">Pedidos pendentes</a></li>
     <li class="tab col l3" s12><a class="tab_item " href="#pedidosAprovados">Pedidos aprovados</a></li>
     <li class="tab col l3" s12><a class="tab_item" href="#pedidosReprovados">Pedidos reprovados</a></li>
