Alterações na tela de aprovar encomenda.

--- a/source/empresa/aprovarencomenda.html
+++ b/source/empresa/aprovarencomenda.html
@@ -80,6 +80,7 @@
     </table>
 </div>
 
+<script src="source/empresa/script/scriptencomenda.js"></script>
 
 <script>
     function telaCarregada() {
