Alterações na tela de aprovar encomenda.

--- a/source/empresa/aprovarencomenda.html
+++ b/source/empresa/aprovarencomenda.html
@@ -23,7 +23,7 @@
                 <td>12/09/2017</td>
                 <td>R$ 1270,30</td>
                 <td>
-                    <center><a class="waves-effect waves-light btn modal-trigger" href="#veritens">Ver itens</a></center>
+                    <a class="waves-effect waves-light btn modal-trigger">Ver itens</a>
                 </td>
             </tr>
         </tbody>
@@ -48,7 +48,7 @@
                 <td>12/09/2017</td>
                 <td>R$ 1270,30</td>
                 <td>
-                    <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Ver informações</a>
+                    <a class="waves-effect waves-light btn modal-trigger">Ver informações</a>
                 </td>
             </tr>
         </tbody>
