Alteração na index para melhorar o navbar

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     <!--Barra de navegação-->
     <ul class="side-nav" id="mobile-demo">
     </ul>
+    <ul id="setorEstoque" class="dropdown-content">
+        <li><a onclick="chamarTela('source/empresa/aprovarencomenda.html', 'Aprovar Encomenda');">Aprovar Encomendas</a></li>
+        <li><a onclick="$('#corpo').load('source/empresa/controleEstoque.html'); $('#corpo').show(); $('#cont2').html(''); $('#cont2').hide(); $('#titulo').html('Controle estoque'); document.title = 'Controle Estoque';">Estoque</a></li>
+        <li><a onclick="chamarTela('source/empresa/aprovarencomenda.html', 'Aprovar Encomenda');">Solicitar produtos</a></li>
+    </ul>
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper blue-grey darken-4">
@@ -52,8 +57,7 @@
                 </ul>
                 <ul id="nav-mobile-empresa" class="right hide-on-med-and-down" style="display: none" style="color: #eceff1">
                     <li><a onclick="chamarTela('source/empresa/controlepedidos.html', 'Controle Pedidos');">Controle Pedidos</a></li>
-                    <li><a onclick="chamarTela('source/empresa/aprovarencomenda.html', 'Aprovar Encomenda');">Aprovar Encomendas</a></li>
-                    <li><a onclick="$('#corpo').load('source/empresa/controleEstoque.html'); $('#corpo').show(); $('#cont2').html(''); $('#cont2').hide(); $('#titulo').html('Controle estoque'); document.title = 'Controle Estoque';">Estoque</a></li>
+                    <li><a class="dropdown-button" href="#!" data-activates="setorEstoque">Setor de Estoque<i class="material-icons right">arrow_drop_down</i></a></li>
                     <li><a href="" onclick='document.cookie = "usuariologado=;"'>Sair</a></li>
                 </ul>
 
