--- a/source/cliente/meuspedidos.html
+++ b/source/cliente/meuspedidos.html
@@ -218,9 +218,7 @@
         width: 70% !important;
     }
 
-    .imagem {
-        -moz-background-size: 100% 100%;
-        -webkit-background-size: 100% 100%;
+    .imagem { -moz-background-size: 100% 100%; -webkit-background-size: 100% 100%;
         background-size: 100% 100%;
         display: inline-block;
         float: right;
