--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -62,7 +62,7 @@
     </div>
     <!--Div da tela de login-->
     <div class="row">
-        <div class="container" id="containerLogin">
+        <div class="container" id="containerLogin">            
             <div id="dLogin">
                 <div id="usuarios">
                     <a id="voltar" class="btn"><i class="material-icons">arrow_back</i></a><br>
@@ -102,7 +102,7 @@
         <!-- Scaled in -->
         <div id="carr" class="inativo">
             <a id="scale-demo" href="#!" class="btn-floating btn-large inativo">
-                    <i class="material-icons">add</i>
+                <i class="material-icons">add</i>
             </a>
         </div>
     </div>
@@ -122,57 +122,55 @@
             <a class="waves-effect waves-light btn red darken-4 modal-action modal-close"><i class="material-icons left">cancel</i>Cancelar pedido</a>
         </div>
     </div>
-    <!--- Modal Structure NOVA -->
+    <!--- Modal Structure Controle Pedidos -->
     <div id="modalDetalhesPedido" class="modal">
         <div class="modal-content">
-            <div class="pedidoEsquerda">
-                <h5>Itens</h5>
-                <div class="itensPedido" onmouseleave="sumirImagem(1);">
-                    <table class="responsive-table centered highlight">
-                        <tbody>
-                        <tr class="produtos-lindinhos">
-                            <td><a onclick="iC(1,1);" class='item'>Produto 1</a></td>
-                        </tr>
-                        <tr class="produtos-lindinhos">
-                            <td><a onclick="iC(1,2);" class='item'>Produto 2</a></td>
-                        </tr>
-                        <tr class="produtos-lindinhos">
-                            <td><a onclick="iC(1,3);" class='item'>Produto 3</a></td>
-                        </tr>
-                        </tbody>
-                    </table>
+            <h4 class="center">Pedido #2354</h4>
+            <div id="itens-pedido">
+                <h5 class="center">Itens do Pedido</h5>
+                <div id="p1" class="div-produto" onclick="selecionarProduto(1)"><span>Caixas K </span>x20</div>
+                <div id="dp1" class="detalhes-produto">
+                    <h6>Matéria-prima</h6>
+                    Item 1: Em estoque<br>
+                    Item 2: Em falta
+                    <h6>Tempo de Produção</h6>
+                    6 dias
+                    <hr>
+                    Finalizado: <i id="check1" onclick="checar(1)" class="check material-icons" style="vertical-align: bottom">radio_button_unchecked</i>
                 </div>
-                <div id="materiasPrimas" class="materiasPrimas">
-                    <h5>Materia-prima a comprar</h5>
-                    PET - R$50,00<br> Polipropileno - R$30,00
-                    <hr> Total: R$80,00
+                <div id="p2" class="div-produto" onclick="selecionarProduto(2)"><span>Flaconete </span>x10</div>
+                <div id="dp2" class="detalhes-produto">
+                    <h6>Matéria-prima</h6>
+                    Item 1: Em estoque<br>
+                    Item 2: Em falta
+                    <h6>Tempo de Produção</h6>
+                    6 dias
+                    <hr>
+                    Finalizado: <i id="check2" onclick="checar(2)" class="check material-icons" style="vertical-align: bottom">radio_button_unchecked</i>
                 </div>
-                <div id="tempoEstimado">
-                    <h5>Tempo estimado</h5>
-                    Importar materia-prima - 3 dias<br> Producao - 4 dias<br> Envio - 5 anos
-                    <hr> Total: 5 anos e 7 dias
+                <div id="p3" class="div-produto" onclick="selecionarProduto(3)"><span>Frasco </span>x25</div>
+                <div id="dp3" class="detalhes-produto">
+                    <h6>Matéria-prima</h6>
+                    Item 1: Em estoque<br>
+                    Item 2: Em falta
+                    <h6>Tempo de Produção</h6>
+                    6 dias
+                    <hr>
+                    Finalizado: <i id="check3" onclick="checar(3)" class="check material-icons" style="vertical-align: bottom">radio_button_unchecked</i>
                 </div>
             </div>
-            <div id="pedidoDireita" class="pedidoDireita">
-                <h5 style="text-align: center" id="nomeProduto">Shulambs</h5>
-                <hr>
-                <div class="pd">
-                    <div id="detalhes-esquerda" class="detalhes-esquerda">
-                        <div id="preco-unitario"></div><br>
-                        <div id="preco-total"></div>
-                        <div id="custo-producao"></div>
-                    </div>
-                    <div id="imagemProduto" class="imagemProduto"></div>
-                </div>
-                <div id="descricaoProduto" class="descricaoProduto"></div>
+            <div id="detalhes-pedido">
+                <h5 class="center">Detalhes do Pedido</h5>
+                <div id="p1" class="div-produto" onclick="selecionarProduto(1)"><span>Lucro Estimado: </span>R$50,00</div>
+                <div id="p2" class="div-produto" onclick="selecionarProduto(2)"><span>Tempo Estimado: </span>10 dias</div>
+                <div id="p3" class="div-produto" onclick="selecionarProduto(3)"><span>Falta Matéria-Prima? </span>Sim</div>
             </div>
         </div>
-        <hr>
-        <div id="parteLegal" style="float: right">
-            <a href="#!" class="btn modal-action modal-close waves-effect waves-green">Rejeitar</a>
-            <a href="#!" class="btn modal-action modal-close waves-effect waves-green">Aprovar</a>
+        <div class="modal-footer">
+                <a href="#!" class="modal-action modal-close waves-effect btn  teal lighten-2">Fechar</a>
         </div>
     </div>
+    
     <!-- Modal Structure Brian-->
     <div id="veritens" class="modal modal-fixed-footer">
         <div class="modal-content">
@@ -208,7 +206,8 @@
                         <td>Azul</td>
                         <td>Transparente</td>
                         <td>R$60.00</td>
-                        <td><i class="small material-icons">delete_forever</i><td>
+                        <td><i class="small material-icons">delete_forever</i>
+                            <td>
                     </tr>
                     <tr>
                         <td>Frasco</td>
@@ -216,7 +215,8 @@
                         <td>Azul</td>
                         <td>Transparente</td>
                         <td>R$60.00</td>
-                        <td><i class="small material-icons">delete_forever</i><td>
+                        <td><i class="small material-icons">delete_forever</i>
+                            <td>
                     </tr>
                     <tr>
                         <td>Frasco</td>
@@ -224,7 +224,8 @@
                         <td>Azul</td>
                         <td>Transparente</td>
                         <td>R$60.00</td>
-                        <td><i class="small material-icons">delete_forever</i><td>
+                        <td><i class="small material-icons">delete_forever</i>
+                            <td>
                     </tr>
                 </tbody>
             </table>
@@ -233,7 +234,7 @@
         </div>
         <div class="modal-footer">
             <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Continuar Comprando</a>
-            <a href="source/cliente/orcamento.html" class="modal-action modal-close waves-effect waves-green btn-flat">Finalizar Compra</a>
+            <a onclick="chamarTela('source/cliente/orcamento.html', 'Orçamento')" class="modal-action modal-close waves-effect waves-green btn-flat">Finalizar Compra</a>
         </div>
     </div>
 </body>
